# saffire

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTORS  COPYING  LICENSE  Makefile  Makefile.am  Makefile.frag  README  README.md  Vagrantfile  autogen.sh  build.sh  clean.sh  configure.ac  configure.in  coverage.sh  debug.sh  gcov.sh  hello.cc  hello.sf  main.c  nodebug.sh  readdump.php  saffire.l  saffire.man  saffire.y  saffire_parser.h  sf-unittest.sh  svar.h  test.sf  unittest.sh
documentation/: Usage.md  (+4 more)
lib/cmake/libcpuid/: CMakeLists.txt
saffire/components/compiler/: Makefile.am  bytecode.h
saffire/main/: Makefile.am
saffire/main/commands/: compile.c  exec.c
src/: CMakeLists.txt  Makefile  Makefile.am  ast.c  ast.h  class.h  coalesce.dot  coalesce_emulated.sfa  command.h  config.h  config.h.in  config.h.in~  debug.h  dot.c  dot.h  main.c  node.h  saffire.l  saffire.y  saffire_compile.c  saffire_compile.h  saffire_compiler.c  saffire_compiler.h  saffire_interpreter.c  saffire_interpreter.h  saffire_parser.c  saffire_parser.h  svar.c  svar.h  symbol.c  symbol.h  test.c  version.h
src/commands/: cli.c  compile.c  config.c  config.h  exec.c  fastcgi.c  help.c  lint.c  version.c
src/compiler/: ast.c  ast.h  bytecode.c  bytecode.h  class.h  lex.yy.c  lex.yy.h  parser.tab.c  parser.tab.h  saffire.l  saffire.y  saffire_compiler.c  saffire_compiler.h
src/components/: CMakeLists.txt  Makefile.am
src/components/compiler/: CMakeLists.txt  assembler.c  ast.c  ast2bc.c  ast_nodes.c  ast_to_asm.c  ast_to_bytecode.c  ast_walker.c  bytecode.c  compiler.c  dot.c  parser.c  parser.xml  parser_helpers.c  saffire.l  saffire.y  saffire_compiler.c
src/components/compiler/bytecode/: io.c  marshal.c
src/components/compiler/output/: asm.c  dot.c
src/components/debugger/: CMakeLists.txt
src/components/debugger/dbgp/: args.c  commands.c  dbgp.c  sock.c  xml.c
src/components/fastcgi/: CMakeLists.txt  Makefile.am  daemonize.c  fastcgi_srv.c  scoreboard.c
src/components/gc/: CMakeLists.txt  gc.c
src/components/general/: CMakeLists.txt  base64.c  bzip2.c  config.c  dll.c  gpg.c  hashtable.c  ini.c  md5.c  mutex.c  output.c  parse_options.c  path_handling.c  popen2.c  smm.c  stack.c  string.c  unicode.c
src/components/general/hash/: chained.c  hash_funcs.c
src/components/general/printf/: arg_printf.c
src/components/general/smm/: asprintf.c
src/components/interpreter/: context.c  errors.c  interpreter.c  saffire_interpreter.c
src/components/memory/: CMakeLists.txt  smm.c
src/components/memory/printf/: asprintf.c
src/components/modules/: CMakeLists.txt  Makefile.am  io.c  module_api.c  saffire.c
src/components/modules/sapi/: fastcgi.c
src/components/modules/standard/: cpu.c  datetime.c  file.c  io.c  math.c  os.c
src/components/objects/: CMakeLists.txt  attrib.c  base.c  boolean.c  callable.c  code.c  exception.c  hash.c  list.c  meta.c  method.c  null.c  numerical.c  object.c  regex.c  string.c  tuple.c  user.c  userland.c
src/components/repl/: CMakeLists.txt  Makefile.am  prompt.c  repl.c
src/components/vm/: CMakeLists.txt  Makefile.am  bc001.bcs  bc001_bcs.c  bc002.bcs  bc002_bcs.c  bc003.bcs  bc003_bcs.c  bc004.bcs  bc004_bcs.c  bc005.bcs  bc005_bcs.c  block.c  codeblock.c  codeframe.c  context.c  frame.c  import.c  stackframe.c  thread.c  vm.c
src/dot/: dot.c  dot.h
src/fastcgi/: fastcgi.c  fastcgi.h  fastcgi_srv.c  fastcgi_srv.h  scoreboard.c
src/general/: dll.c  hashtable.c  ini.c  ini.h  levenshtein.c  levenshtein.h  parse_options.c  parse_options.h  smm.c  smm.h  svar.c  svar.h  symbol.c
src/general/hash/: chained.h  hash_funcs.c  hash_funcs.h
src/hashtable/: Makefile  hash.c  hashtable.c  hashtable.h
src/include/: debug.h  gitversion.h.cmake  version.h
src/include/commands/: command.h  config.h
src/include/compiler/: assembler.h  ast.h  ast_nodes.h  ast_to_asm.h  ast_walker.h  bytecode.h  class.h  compiler.h  parser.h  parser_helpers.h  saffire_parser.h
src/include/compiler/output/: asm.h
src/include/debugger/dbgp/: args.h  commands.h  dbgp.h  sock.h  xml.h
src/include/dot/: dot.h
src/include/fastcgi/: daemonize.h  fastcgi_srv.h  scoreboard.h
src/include/gc/: gc.h
src/include/general/: base64.h  bzip2.h  config.h  definitions.h  dll.h  gpg.h  hashtable.h  ini.h  mutex.h  output.h  parse_options.h  path_handling.h  popen2.h  printf.h  smm.h  stack.h  string.h  unicode.h
src/include/general/hash/: chained.h  hash_funcs.h
src/include/interactive/: interactive.h
src/include/interpreter/: context.h  errors.h  interpreter.h  saffire_interpreter.h
src/include/modules/: module_api.h
src/include/object/: method.h  object.h
src/include/objects/: _exceptions.inc  attrib.h  base.h  boolean.h  callable.h  code.h  create_exceptions.php  exception.h  hash.h  interfaces.h  list.h  method.h  null.h  numerical.h  object.h  objects.h  regex.h  string.h  tuple.h  user.h  userland.h
src/include/repl/: repl.h
src/include/vm/: block.h  codeblock.h  codeframe.h  context.h  create_vmopcodes.php  frame.h  import.h  stackframe.h  thread.h  vm.h  vm_opcodes.h  vmtypes.h
src/interactive/: interactive.c  interactive.h
src/interpreter/: context.c  context.h  saffire_interpreter.c  saffire_interpreter.h
src/main/: CMakeLists.txt  Makefile.am  saffire.c
src/main/commands/: CMakeLists.txt  bytecode.c  cli.c  compile.c  config.c  exec.c  fastcgi.c  help.c  lint.c  repl.c  sign.c  version.c
src/modules/: io.c  io.h  module_api.c  module_api.h  saffire.c
src/object/: base.c  base.h  boolean.c  boolean.h  code.c  code.h  method.c  null.c  null.h  numerical.c  numerical.h  object.c  object.h  regex.c  regex.h  string.c  string.h
src/repl/: repl.c  repl.h
src/sfl/: file.sf  io.sf  os.sf  pcntl.sf  saffire.sf
src/sfl/ipc/: semaphore.sf
src/vm/: vm.c  vm.h  vm_opcodes.h
unittests/core/: CMakeLists.txt  Makefile.am  README  main.c  utmain.c
unittests/core/bz2/: bz2.c  bz2.h
unittests/core/dll/: dll.c  dll.h
unittests/core/hashtable/: hashtable.c  hashtable.h
unittests/core/ini/: ini.c  ini.h
(+428 files in other folders)
